--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,7 +4,7 @@
   font-weight: 900;
   font-style: normal;
   line-height: 76px;
-  width: 50%;
+  max-width: 460px;
 }
 
 @media (max-width: 768px) {
